# kni-ws

./: .gitmodules
encoder/: .mxproject  2026a-gn10-mainboard.ioc  CMakeLists.txt
encoder/Core/Src/: fdcan.c  i2c.c  main.c  stm32g4xx_it.c  tim.c
encoder/cmake/stm32cubemx/: CMakeLists.txt
encoder/encoder/: CMakeLists.txt
encoder/encoder/src/: encoder.cpp
esc_hub/: .mxproject  CMakeLists.txt  esc-control-hub.ioc
esc_hub/Core/Src/: main.c  tim.c
esc_hub/USBX/App/: app_usbx.c  app_usbx.h  app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c  ux_device_cdc_acm.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_user.h
esc_hub/cmake/stm32cubemx/: CMakeLists.txt
esc_hub/encoder/: CMakeLists.txt
esc_hub/encoder/include/encoder/: vesc_can.hpp
esc_hub/encoder/src/: encoder.cpp  vesc_can.cpp
gn10_esc_server/: .mxproject  2026a-gn10-mainboard.ioc  CMakeLists.txt  README.md  STM32G474XX_FLASH.ld
gn10_esc_server/Core/Inc/: fdcan.h  i2c.h  main.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
gn10_esc_server/Core/Src/: fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  sysmem.c  system_stm32g4xx.c  tim.c  usart.c
gn10_esc_server/cmake/: starm-clang.cmake
gn10_esc_server/gn10_can/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_ja.md  gn10-can.code-workspace  package.xml  setting.json  stm32_toolchain.cmake  update_versions.py
gn10_esc_server/gn10_can/.github/: copilot-instructions.md
gn10_esc_server/gn10_can/.github/workflows/: test.yml
gn10_esc_server/gn10_can/docs/: architecture.md  getting-started.md  gn10-can-class.md  porting-guide.md  servo-driver.md  testing.md
gn10_esc_server/gn10_can/drivers/stm32_can/: driver_stm32_can.cpp  driver_stm32_can.hpp
gn10_esc_server/gn10_can/drivers/stm32_fdcan/: driver_stm32_fdcan.cpp
gn10_esc_server/gn10_can/include/gn10_can/core/: can_bus.hpp  can_device.hpp  can_frame.hpp  can_id.hpp  fdcan_bus.hpp  fdcan_device.hpp  fdcan_frame.hpp
gn10_esc_server/gn10_can/include/gn10_can/devices/: esc_hub_client.hpp  esc_hub_server.hpp  motor_driver_client.hpp  motor_driver_server.hpp  motor_driver_types.hpp  power_manager_client.hpp  power_manager_server.hpp  power_manager_types.hpp  robot_control_hub_client.hpp  robot_control_hub_server.hpp  servo_motor_client.hpp  servo_motor_server.hpp  solenoid_driver_client.hpp  solenoid_driver_server.hpp
gn10_esc_server/gn10_can/include/gn10_can/drivers/: can_driver_interface.hpp  fdcan_driver_interface.hpp
gn10_esc_server/gn10_can/include/gn10_can/utils/: can_converter.hpp
gn10_esc_server/gn10_can/src/core/: can_bus.cpp  fdcan_bus.cpp
gn10_esc_server/gn10_can/src/devices/: esc_hub_client.cpp  esc_hub_server.cpp  motor_driver_client.cpp  motor_driver_server.cpp  motor_driver_types.cpp  power_manager_client.cpp  power_manager_server.cpp  servo_motor_client.cpp  servo_motor_server.cpp  solenoid_driver_client.cpp  solenoid_driver_server.cpp
gn10_esc_server/gn10_can/tests/: CMakeLists.txt  mock_driver.hpp  test_can_bus.cpp  test_can_converter.cpp  test_can_frame.cpp  test_motor_driver.cpp
gn10_esc_server/gn10_can/uml/: architecture_layers.pu  can_id_design.pu  class.pu  class_simplified.pu  classes.pu  motor_driver_pattern.pu  motor_sequence.pu  overview.pu  overview_ja.pu  servo_classes.pu  servo_overview.pu
gn10_esc_server/gn10_mainboard/: CMakeLists.txt
gn10_esc_server/gn10_mainboard/include/gn10_mainboard/: four_wheel_omni.hpp  mecanum_wheel.hpp  pid.hpp  vesc_can.hpp
gn10_esc_server/gn10_mainboard/src/: app.cpp  fdcan_driver.cpp  mecanum_wheel.cpp  vesc_can.cpp
gn10_esc_server/robomas_can/: CMakeLists.txt
gn10_esc_server/robomas_can/include/robomas_can/: c610_can.hpp  c620_can.hpp  robomas_data.hpp
gn10_esc_server/robomas_can/src/: c610_can.cpp  c620_can.cpp  robomas_data.cpp
gn10_esc_server/wiznet_ether/: CMakeLists.txt
gn10_esc_server/wiznet_ether/include/wiznet_ether/: ethernet_config.hpp  robot_data_config.hpp  robot_ethernet.hpp  serial_printf.hpp  socket.hpp  w5500.hpp  w5500_spi.hpp  wizchip_conf.hpp
gn10_esc_server/wiznet_ether/src/: robot_ethernet.cpp  serial_printf.cpp  socket.cpp  w5500.cpp  w5500_spi.cpp  wizchip_conf.cpp
